Testing/Generic/Ingress/base/web-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: green
  name: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green
  strategy:
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2 
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: green
    spec:
      volumes:
      - configMap:
          name: greenindex
        name: green-index
      imagePullSecrets:
      - name: regcred
      containers:
      - image: docker.io/kwaberski/test:3.0
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: green-index
          mountPath: /usr/share/nginx/html
          readOnly: true
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: red
  name: red
spec:
  replicas: 2
  selector:
    matchLabels:
      app: red
  strategy:
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2 
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: red
    spec:
      volumes:
      - configMap:
          name: redindex
        name: red-index
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: red-index
          mountPath: /usr/share/nginx/html
          readOnly: true
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: green
  name: green
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: green
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: red
  name: red
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: red
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vhost
spec:
  rules:
  - host: green.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: green
            port:
              number: 80
  - host: red.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: red
            port:
              number: 80
